# Integrated-srcm-ssa

./: .gitignore  CHANGELOG.md  README.md  SI_model.py  activ_inhib.py  animate.py  new_system.py  pyproject.toml  run_from_preset.py
data/: ssa_results.npz
examples/: SI_model.py  Switching_double_thresh.py  new_system_traj.py  pred.py  pure_diffusion.py
integrated_srcm_ssa/: __init__.py  srcm_runner.py
integrated_srcm_ssa/presets/: __init__.py  loader.py
integrated_srcm_ssa/tools/: animate.py  inspect.py  inspect_traj.py
presets/: SI_model.yaml  bistable.yaml  conv_decay.yaml  fkpp.yaml  invading_front.yaml  pred_prey.yaml  species_annihilation.yaml
