[tool.poetry]
name = "integrated-srcm-ssa"
version = "1.0.1"
description = ""
authors = ["Cgyc20 <cgyc20@bath.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
numpy = "*"
matplotlib = "*"
tqdm = "*"
pandas = "*"
joblib = "*"
pyyaml = "*"

srcm-engine = { git = "https://github.com/Cgyc20/srcm-engine.git", rev = "v0.2.0" }
stochastic-framework = { git = "https://github.com/Cgyc20/stochastic_framework.git", rev = "main" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
srcm-inspect = "integrated_srcm_ssa.tools.inspect:main"
srcm-animate = "integrated_srcm_ssa.tools.animate:main"

