[tool.poetry]
name = "integrated-srcm-ssa"
version = "1.0.1"
description = ""
authors = ["Cgyc20 <cgyc20@bath.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
numpy = "*"
matplotlib = "*"
tqdm = "*"
pandas = "*"
joblib = "*"
pyyaml = "*"


srcm-engine = { path = "/Users/charliecameron/CodingHub/PhD/Y2_code/srcm-engine", develop = true }
stochastic-framework = { path = "/Users/charliecameron/CodingHub/PhD/Y2_code/stochastic_framework", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
srcm-inspect = "integrated_srcm_ssa.tools.inspect:main"
srcm-animate = "integrated_srcm_ssa.tools.animate:main"

