[tool.poetry]
name = "integrated-srcm-ssa"
version = "1.1.4"
description = ""
authors = ["Cgyc20 <cgyc20@bath.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = "*"
matplotlib = "*"
tqdm = "*"
pandas = "*"
joblib = "*"
pyyaml = "*"


stochastic-framework = {git = "https://github.com/Cgyc20/stochastic_framework.git", tag = "v0.2.3"}
srcm-engine = {git = "https://github.com/Cgyc20/srcm-engine.git", tag ="v0.2.4" } 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
srcm-inspect = "integrated_srcm_ssa.tools.inspect:main"
srcm-animate = "integrated_srcm_ssa.tools.animate:main"
srcm-traj = "integrated_srcm_ssa.tools.inspect_traj:main"
